--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Slider</title>
-  <link rel="stylesheet" href="./styles.css">
+  <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Image Slider - A visually appealing image slider project created using HTML, CSS, and JavaScript. It features automatic and manual slideshow navigation with customized transition effects." />
+    <meta name="keywords" content="Image Slider, Image Carousel, HTML, CSS, JavaScript, Slideshow, Responsive Design" />
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Image Slider Project</title>
 </head>
 <body>
 
