--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Image Slider Project</title>
 </head>
 <body>
+  <a href="https://nenorvalls-projects-showcase.netlify.app/" class="back-to-landing">
+    <h1>Image Slider</h1>
+</a>
 
 <div class="slider-container">
   <div class="slides">
