--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
     <div class="slide"><img src="./images/5.jpg" alt="Slide 5"></div>
     <div class="slide"><img src="./images/6.jpg" alt="Slide 6"></div>
   </div>
-
-  <a href="https://nenorvalls-projects-showcase.netlify.app/" class="back-to-landing">
+  
     <h1>Image Slider</h1>
-</a>
   
   <button class="slider-btn prev" onclick="prevSlide()">&#10094;</button>
   <button class="slider-btn next" onclick="nextSlide()">&#10095;</button>
 </div>
-
+<button id="goBackButton">Go Back to Portfolio</button>
 <footer>
   <span>Design by: NeNorvalls</span>
 </footer>
