--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <title>Image Slider Project</title>
 </head>
 <body>
-   <h1>Image Slider</h1>
-    <button id="goBackButton">Go Back to Portfolio</button>
 <div class="slider-container">
+  <h1 id="goBackButton">Image Slider</h1>
   <div class="slides">
     <div class="slide"><img src="./images/1.jpg" alt="Slide 1"></div>
     <div class="slide"><img src="./images/2.jpg" alt="Slide 2"></div>
@@ -20,8 +19,8 @@
     <div class="slide"><img src="./images/5.jpg" alt="Slide 5"></div>
     <div class="slide"><img src="./images/6.jpg" alt="Slide 6"></div>
   </div>
-    <button class="slider-btn prev" onclick="prevSlide()">&#10094;</button>
-    <button class="slider-btn next" onclick="nextSlide()">&#10095;</button>
+  <button class="slider-btn prev" onclick="prevSlide()">&#10094;</button>
+  <button class="slider-btn next" onclick="nextSlide()">&#10095;</button>
 </div>
 <footer>
   <span>Design by: NeNorvalls</span>
